--- a/index.html
+++ b/index.html
@@ -8,68 +8,46 @@
     <title>To Do List</title>
 </head>
 <body>
-    <header>
-        <section id="date">
-            <h1>Monday, Dec 21, 2020</h1>
-        </section>
-    </header>
-    <main>
-        <section id="mainContent">
-            <section id="itemInputSec">
-                <div>
-                    <form action="">
-                        <input type="text" name="itemText" id="itemText">
-                        <input type="button" value="+">
-                    </form>
-                </div>
+    <div class="container-fluid">
+        <header>
+            <section id="date">
+                <h1>Monday, Dec 21, 2020</h1>
             </section>
-            <section id="listContent">
-                <section id="noItems">
-                    <h2>You have nothing to do!</h2>
+        </header>
+        <main>
+            <section id="mainContent">
+                <section id="itemInputSec">
+                    <div>
+                        <form action="">
+                            <input type="text" name="itemText" id="itemText">
+                            <input type="button" value="+">
+                        </form>
+                    </div>
                 </section>
-                <section id="itemList">
-                    <ul id="list">
-                        <li>
-                            <div>
-                                <div>
-                                    <button class="completeBtn">Done</button>
-                                    <p>Task is put here.</p>
+                <section id="listContent">
+                    <section id="noItems">
+                        <h2>You have nothing to do!</h2>
+                    </section>
+                    <section id="itemList">
+                        <ul id="list" class="list-unstyled">
+                            <li>
+                                <div class="row">
+                                    <div class="row col-10">
+                                        <button class="completeBtn">Done</button>
+                                        <p>Task is put here.</p>
+                                    </div>
+                                    <div class="row col-2">
+                                        <button id="editBtn">Edit</button>
+                                        <button id="deleteBtn"> Delete</button>
+                                    </div>
                                 </div>
-                                <div>
-                                    <button id="editBtn">Edit</button>
-                                    <button id="deleteBtn"> Delete</button>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <div>
-                                    <button class="completeBtn">Done</button>
-                                    <p>Task is put here.</p>
-                                </div>
-                                <div>
-                                    <button id="editBtn">Edit</button>
-                                    <button id="deleteBtn"> Delete</button>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div>
-                                <div>
-                                    <button class="completeBtn">Done</button>
-                                    <p>Task is put here.</p>
-                                </div>
-                                <div>
-                                    <button id="editBtn">Edit</button>
-                                    <button id="deleteBtn"> Delete</button>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
+                            </li>
+                        </ul>
+                    </section>
                 </section>
             </section>
-        </section>
-    </main>
+        </main>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
 </body>
