Started a new main.js to fix mistakes

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
                 <section id="noItems" >
                     <h2>You have nothing to do!</h2>
                 </section>
-                <section id="itemList" class="hide">
+                <section id="itemList" class="">
                     <ul id="list" class="list-unstyled">
+                        
                     </ul>
                 </section>
             </section>
@@ -40,6 +41,6 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="js/getTime.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/mainVer2.js"></script>
 </body>
 </html>
